# niasotac-

./: .gitignore  .replit  API_DOCUMENTATION.md  GUIDE_DEMARRAGE.md  README.md  pyproject.toml  replit.md
.local/state/replit/agent/: progress_tracker.md
backend/: manage.py
backend/niasotac_backend/: settings.py  urls.py
backend/showcase/: admin.py  models.py  serializers.py  urls.py  views.py
backend/showcase/management/commands/: populate_data.py
backend/showcase/migrations/: 0001_initial.py  0002_sitesettings.py
frontend/: .env.example  README.md
frontend/src/: App.tsx  index.css
frontend/src/components/: ContactForm.tsx  Footer.tsx  HeroSection.tsx  Navbar.tsx  ProductCard.tsx  WhatsAppButton.tsx
frontend/src/hooks/: useCategories.ts  useSiteSettings.ts
frontend/src/pages/: Contact.tsx  ProductDetail.tsx  Products.tsx  Services.tsx
src/: .gitignore  GUIDE_DEPLOIEMENT.md  GUIDE_MAINTENANCE.md  GUIDE_MIGRATION_BDD.md  README.md  start.sh
src/backend/: README.md  requirements.txt
src/backend/niasotac_backend/: asgi.py  logging.py  settings.py  urls.py  wsgi.py
src/backend/showcase/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
src/frontend/: .gitignore  README.md  index.html  tailwind.config.ts  vite.config.ts
src/frontend/src/components/: CategoryCard.tsx  ContactForm.tsx  Footer.tsx  HeroSection.tsx
src/frontend/src/data/: mockData.ts
src/frontend/src/hooks/: useProducts.ts
src/frontend/src/lib/: api.ts
src/frontend/src/pages/: Home.tsx  Products.tsx
(+1 files in other folders)
